# cookiecutter-poetry

./: 404.html  LICENSE  README.md  cookiecutter.json  index.html  sitemap.xml
features/cicd/: index.html
features/formatting/: index.html
features/linting/: index.html
features/makefile/: index.html
features/mkdocs/: index.html
features/mypy/: index.html
features/poetry/: index.html
features/publishing/: index.html
features/pytest/: index.html
features/tox/: index.html
prompt_arguments/: index.html
search/: search_index.json
tutorial/: index.html
{{cookiecutter.project_name}}/: CONTRIBUTING.rst  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/.github/workflows/: on-merge-to-main.yml  on-release-main.yml
{{cookiecutter.project_name}}/docs/: index.md  usage.md
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: foo.py
