[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.0.1"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.open_source_license}}"
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_name}}"
documentation = "https://{{cookiecutter.github_username}}.github.io/{{cookiecutter.project_name}}/"
readme = "README.md"
packages = [
  {include = "{{cookiecutter.project_slug}}"}
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"


[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.1.2"
{% if cookiecutter.mkdocs == 'y' -%}
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.9"
mdx-include = "^1.4.1"
{% endif -%}
{% if cookiecutter.mypy == 'y' -%}
mypy = "^0.942"
{%- endif %}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
experimental_string_processing = true
include = '\.pyi?$'
target-version = ['py39']
fast = true
exclude = '''
(
  /(                        # exclude a few common directories in the
    \.git                   # root of the project
    | \.pytest_cache
    | python-venv
    | \.venv
    | build
    | dist
    | \.tox
  ))
'''

[tool.isort]
profile = "black"
ensure_newline_before_comments = true
line_length = 120
force_single_line = true
force_alphabetical_sort_within_sections = true

{% if cookiecutter.mypy == 'y' -%}
[tool.mypy]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
exclude = [
    '\.venv',
    'tests'
]
{% endif %}
